feat: edit account access and reset passwords
